--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,6 +15,8 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           python-version: '3.10'
+      - run: sudo apt-get update
+      - run: sudo apt install python3-pip
       - run: python -m pip install --upgrade pip
       - run: pip install -r requirements.txt
       - run: python -m pytest
