--- a/docker_and_setup/requirements.txt
+++ b/docker_and_setup/requirements.txt
@@ -1,10 +1,18 @@
 flask==2.3.2
 flask-sqlalchemy==3.0.5
 flask-restful==0.3.10
-flask-swagger-ui==4.11.1
 pytest==7.4.0
 flake8==6.1.0
 black==23.7.0
 flask-debugtoolbar==0.13.1
 flask_prometheus_metrics==1.0.0
 mypy==1.5.1
+flasgger==0.9.7.1
+loguru==0.7.2
+flask-caching==2.0.2
+sphinx==7.2.6
+myst-parser==2.0.0
+sphinx-autoapi==2.1.1
+sphinx_rtd_theme==1.3.0
+pytest-cov==4.1.0
+flask-limiter==3.5.0
