--- a/docker_and_setup/requirements.txt
+++ b/docker_and_setup/requirements.txt
@@ -4,7 +4,6 @@ flask-restful==0.3.10
 pytest==7.4.0
 flake8==6.1.0
 black==23.7.0
-flask-debugtoolbar==0.13.1
 flask_prometheus_metrics==1.0.0
 mypy==1.5.1
 flasgger==0.9.7.1
@@ -16,3 +15,4 @@ sphinx-autoapi==2.1.1
 sphinx_rtd_theme==1.3.0
 pytest-cov==4.1.0
 flask-limiter==3.5.0
+flask-swagger-ui-4.11.1
