--- a/docker_and_setup/requirements.txt
+++ b/docker_and_setup/requirements.txt
@@ -7,6 +7,7 @@ black==23.7.0
 flask_prometheus_metrics==1.0.0
 mypy==1.5.1
 flasgger==0.9.7.1
+flask-swagger-ui==4.11.1
 loguru==0.7.2
 flask-caching==2.0.2
 sphinx==7.2.6
@@ -15,4 +16,5 @@ sphinx-autoapi==2.1.1
 sphinx_rtd_theme==1.3.0
 pytest-cov==4.1.0
 flask-limiter==3.5.0
-flask-swagger-ui-4.11.1
+psycopg2==2.9.9
+python-dotenv==1.0.0
