--- a/docker_and_setup/requirements.txt
+++ b/docker_and_setup/requirements.txt
@@ -6,11 +6,8 @@ flake8==6.1.0
 black==23.7.0
 flask_prometheus_metrics==1.0.0
 mypy==1.5.1
-flasgger==0.9.7.1
-flask-swagger-ui==4.11.1
 loguru==0.7.2
 flask-caching==2.0.2
-sphinx==7.2.6
 myst-parser==2.0.0
 sphinx-autoapi==2.1.1
 sphinx_rtd_theme==1.3.0
@@ -18,6 +15,6 @@ pytest-cov==4.1.0
 flask-limiter==3.5.0
 psycopg2==2.9.9
 python-dotenv==1.0.0
-flask-restful-swagger==0.20.1
 pandas==2.2.0
 openpyxl==3.1.2
+pyarrow==15.0.0
