--- a/docker_and_setup/Dockerfile
+++ b/docker_and_setup/Dockerfile
@@ -2,5 +2,5 @@ FROM python:3.11-alpine
 WORKDIR /app
 COPY .. /app
 COPY . /
-RUN pip install -r requirements.txt
+RUN pip install -r .\docker_and_setup\requirements.txt
 CMD ["python", "app.py"]
