--- a/docker_and_setup/requirements.txt
+++ b/docker_and_setup/requirements.txt
@@ -13,7 +13,7 @@ sphinx-autoapi==2.1.1
 sphinx_rtd_theme==1.3.0
 pytest-cov==4.1.0
 flask-limiter==3.5.0
-psycopg2==2.9.9
+psycopg2-binary
 python-dotenv==1.0.0
 pandas==2.2.0
 openpyxl==3.1.2
