--- a/requirements.txt
+++ b/requirements.txt
@@ -7,13 +7,13 @@ black==23.7.0
 flask_prometheus_metrics==1.0.0
 mypy==1.5.1
 loguru==0.7.2
-flask-caching==2.0.2
+flask-caching==2.1.0
 myst-parser==2.0.0
 sphinx-autoapi==2.1.1
 sphinx_rtd_theme==1.3.0
 pytest-cov==4.1.0
 flask-limiter==3.5.0
-psycopg2-binary
+psycopg2
 python-dotenv==1.0.0
 pandas==2.2.0
 openpyxl==3.1.2
