--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,37 @@ static/cert.pem
 static/key.pem
 .coverage
 .env
+api/__pycache__/__init__.cpython-311.pyc
+api/__pycache__/available_routes.cpython-311.pyc
+api/__pycache__/available_versions.cpython-311.pyc
+api/__pycache__/favicon.cpython-311.pyc
+api/account/__pycache__/__init__.cpython-311.pyc
+api/account/__pycache__/already_logged_in.cpython-311.pyc
+api/account/__pycache__/blocklist.cpython-311.pyc
+api/account/__pycache__/change_password.cpython-311.pyc
+api/account/__pycache__/delete_account.cpython-311.pyc
+api/account/__pycache__/login.cpython-311.pyc
+api/account/__pycache__/logout.cpython-311.pyc
+api/account/__pycache__/register.cpython-311.pyc
+api/data/__pycache__/__init__.cpython-311.pyc
+api/data/authors/__pycache__/__init__.cpython-311.pyc
+api/data/authors/__pycache__/author.cpython-311.pyc
+api/data/books/__pycache__/__init__.cpython-311.pyc
+api/data/books/__pycache__/book_announcement.cpython-311.pyc
+api/data/books/__pycache__/book.cpython-311.pyc
+api/data/other/__pycache__/__init__.cpython-311.pyc
+api/data/other/__pycache__/library.cpython-311.pyc
+api/data/other/__pycache__/opinion.cpython-311.pyc
+data/test_data/__pycache__/__init__.cpython-311.pyc
+data/test_data/__pycache__/fill_db_script.cpython-311.pyc
+helpers/__pycache__/__init__.cpython-311.pyc
+helpers/__pycache__/api_add_resources.cpython-311.pyc
+helpers/__pycache__/init.cpython-311.pyc
+models/__pycache__/__init__.cpython-311.pyc
+models/__pycache__/author.cpython-311.pyc
+models/__pycache__/book_announcement.cpython-311.pyc
+models/__pycache__/book.cpython-311.pyc
+models/__pycache__/library.cpython-311.pyc
+models/__pycache__/many_to_many_tables.cpython-311.pyc
+models/__pycache__/opinion.cpython-311.pyc
+models/__pycache__/user.cpython-311.pyc
