--- a/requirements.txt
+++ b/requirements.txt
@@ -9,11 +9,9 @@ mypy==1.5.1
 loguru==0.7.2
 flask-caching==2.1.0
 myst-parser==2.0.0
-sphinx-autoapi==2.1.1
-sphinx_rtd_theme==1.3.0
 pytest-cov==4.1.0
 flask-limiter==3.5.0
-psycopg2
+psycopg2==2.9.9
 python-dotenv==1.0.0
 pandas==2.2.0
 openpyxl==3.1.2
@@ -21,4 +19,4 @@ pyarrow==15.0.0
 flask_jwt_extended==4.6.0
 SQLAlchemy==2.0.22
 requests==2.31.0
-Werkzeug==3.0.0
+Werkzeug==3.0.1
