--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-flask==2.3.2
+flask==2.2.5
 flask-sqlalchemy==3.0.5
 flask-restful==0.3.10
 flask_prometheus_metrics==1.0.0
 flask_jwt_extended==4.6.0
 flask-limiter==3.5.0
 flask-caching==2.1.0
+flasgger==0.9.5
 pytest==7.4.0
 pytest-playwright==0.4.4
 flake8==6.1.0
@@ -22,3 +23,4 @@ SQLAlchemy==2.0.22
 requests==2.31.0
 Werkzeug==3.0.1
 PyJWT==2.8.0
+setuptools==69.1.1
