Further refactor and adding mypy config

--- a/helpers/mypy.ini
+++ b/helpers/mypy.ini
@@ -3,3 +3,4 @@ python_version = 3.10
 exclude = venv/
 ignore_missing_imports = True
 explicit_package_bases = True
+disable_error_code = assignment
