--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,7 +42,7 @@ services:
       timeout: 5s
       retries: 3
     env_file:
-      - .env
+      - env.py
     environment:
       POSTGRES_USER: ${user}
       POSTGRES_PASSWORD: ${password}
