--- a/helpers/mypy.ini
+++ b/helpers/mypy.ini
@@ -3,4 +3,4 @@ python_version = 3.10
 exclude = venv/
 ignore_missing_imports = True
 explicit_package_bases = True
-disable_error_code = assignment
+disable_error_code = assignment, attr-defined, var-annotated, arg-type, syntax
