--- a/prometheus.yml
+++ b/prometheus.yml
@@ -4,6 +4,13 @@ global:
 
 scrape_configs:
   - job_name: prometheus
-    metrics_path: '/prometheus-xyzabc/metrics'
+    scrape_interval: 5s
+    scheme: https
+    metrics_path: /metrics
+    tls_config:
+      insecure_skip_verify: true
     static_configs:
-      - targets: ['localhost:5000']
+      - targets:
+        - localhost:5000
+        - docker.host.internal:5000
+        - flask:5000
